--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <body>
     <h1>Hola Mundo!</h1>
     <h2>Soy un subtítulo</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, quia!
+    </p>
   </body>
 </html>
