add p en navbar

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, quia!
     </p>
+    <p>Agregando un párrafo desde una nueva rama (navbar)</p>
   </body>
 </html>
