--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git</title>
   </head>
   <body>
-    <h1>Hola</h1>
+    <h1>Modificando la misma línea</h1>
     <h2>Soy un subtítulo</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, quia!
